Broken links, part 1

--- a/ADC.html
+++ b/ADC.html
@@ -2643,7 +2643,7 @@ cellspacing="0" cellpadding="4">
 following standard extensions. To be considered for addition, an extension must
 be well documented and must be implemented and tested in the real world.</p></div>
 <div class="paragraph"><p>While in development, extensions are tracked here:
-<a href="http://adc.sourceforge.net/wiki/index.php/Extensions">http://adc.sourceforge.net/wiki/index.php/Extensions</a></p></div>
+<a href="https://adc.sourceforge.io/ADC-EXT.html">https://adc.sourceforge.io/ADC-EXT.html</a></p></div>
 <div class="paragraph"><p>Once they have been tried and accepted, they&#8217;re moved to the official extensions
 document that accompanies this one.</p></div>
 </div>
@@ -2652,7 +2652,7 @@ document that accompanies this one.</p></div>
 <div id="footnotes"><hr /></div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2015-02-21 17:56:23 CET
+Last updated 2025-04-05 13:19:39 CEST
 </div>
 </div>
 </body>
